[package]
name = "twitter-telegram-forwarder"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
urlencoding = "2.1"
json = "0.12"
chrono = "0.4"
chrono-tz = "0.8"
